adds print branding markup

--- a/desktop/header.html
+++ b/desktop/header.html
@@ -26,3 +26,7 @@ api.reopenWidget("timeline-controls", {
   }
 });
 </script>
+
+<div class="print-branding">
+    <div id="print-branding-wrapper"></div>
+</div>
