--- a/desktop/body_tag.html
+++ b/desktop/body_tag.html
@@ -4,7 +4,7 @@ document.getElementById("print-branding-wrapper").innerHTML =
   localStorage.getItem("print-branding-title") +
   "<span class='print-branding-url'>" +
   window.location.origin +
-  "</div></div><img class='print-branding-logo' src='" +
+  "</span></div><img class='print-branding-logo' src='" +
   localStorage.getItem("print-branding-logo") +
   "'>";
 </script>
